--- a/src/app/features/auth/register/register.component.html
+++ b/src/app/features/auth/register/register.component.html
@@ -1,14 +1,15 @@
 <div class="min-h-screen flex items-center justify-center bg-gray-100">
     <div class="bg-white p-8 rounded-lg shadow-lg w-full max-w-md">
       <h2 class="text-2xl font-bold mb-6 text-center">Diego Santana - Gerenciamento de Tarefas - Registro</h2>
-      <form>
+      <form (ngSubmit)="onRegister()">
+        <p *ngIf="errorMessage" class="text-red-500 text-sm text-center">{{ errorMessage }}</p>
         <div class="mb-4">
           <label class="block text-gray-700 text-sm font-bold mb-2" for="name">
             Nome
           </label>
           <input
             class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-            id="name" type="text" placeholder="Digite seu nome">
+            id="name" type="text" name="name" [(ngModel)]="name" placeholder="Digite seu nome">
         </div>
   
         <div class="mb-4">
@@ -17,7 +18,7 @@
           </label>
           <input
             class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-            id="email" type="email" placeholder="Digite seu email">
+            id="email" type="email" name="email" [(ngModel)]="email" placeholder="Digite seu email">
         </div>
   
         <div class="mb-4">
@@ -26,7 +27,7 @@
           </label>
           <input
             class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-            id="password" type="password" placeholder="Digite sua senha">
+            id="password" type="password" name="password" [(ngModel)]="password" placeholder="Digite sua senha">
         </div>
   
         <div class="mb-6">
@@ -35,13 +36,13 @@
           </label>
           <input
             class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-            id="confirmPassword" type="password" placeholder="Confirme sua senha">
+            id="confirmPassword" type="password" name="confirmPassword" [(ngModel)]="confirmPassword" placeholder="Confirme sua senha">
         </div>
   
         <div class="flex items-center justify-between">
           <button
             class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
-            type="button">
+            type="submit">
             Registrar
           </button>
           <a class="inline-block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800" href="/login">
