--- a/src/app/features/project/project-list/project-list.component.html
+++ b/src/app/features/project/project-list/project-list.component.html
@@ -1,20 +1,44 @@
 <app-header></app-header>
+
 <div class="w-11/12 md:w-7/10 mx-auto mt-8">
     <div class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-4 gap-4">
-      <button class="w-full h-24 bg-blue-500 rounded-lg hover:bg-blue-700 focus:outline-none flex items-center justify-center text-white text-lg font-semibold">
-        Nome 1
-      </button>
-      <button class="w-full h-24 bg-blue-500 rounded-lg hover:bg-blue-700 focus:outline-none flex items-center justify-center text-white text-lg font-semibold">
-        Nome 2
-      </button>
-      <button class="w-full h-24 bg-blue-500 rounded-lg hover:bg-blue-700 focus:outline-none flex items-center justify-center text-white text-lg font-semibold">
-        Nome 3
-      </button>
-      <button class="w-full h-24 bg-blue-500 rounded-lg hover:bg-blue-700 focus:outline-none flex items-center justify-center text-white text-lg font-semibold">
-        Nome 4
-      </button>
-      <!-- Adicione mais quadrados conforme necessário -->
+        <button
+            class="w-full h-12 bg-blue-800 rounded-lg hover:bg-blue-900 focus:outline-none flex items-center justify-center text-white text-lg font-semibold"
+            (click)="openModal()">
+            Adicionar Projeto
+        </button>
     </div>
-  </div>
-  
-  
+</div>
+
+<div *ngIf="isModalOpen" class="fixed inset-0 flex items-center justify-center bg-gray-800 bg-opacity-50">
+    <div class="bg-white rounded-lg p-8 w-96">
+        <h2 class="text-2xl mb-4">Cadastro de Projeto</h2>
+        <form (ngSubmit)="submitForm()">
+            <div class="mb-4">
+                <label for="projectName" class="block text-sm font-semibold">Nome do Projeto</label>
+                <input [(ngModel)]="projectName" name="projectName" type="text" id="projectName"
+                    class="w-full mt-2 p-2 border border-gray-300 rounded-md" placeholder="Digite o nome do projeto"
+                    required />
+            </div>
+            <div class="flex justify-between">
+                <button type="button" class="px-4 py-2 bg-gray-500 text-white rounded-lg" (click)="closeModal()">
+                    Cancelar
+                </button>
+                <button type="submit" class="px-4 py-2 bg-blue-500 text-white rounded-lg">
+                    Salvar
+                </button>
+            </div>
+        </form>
+    </div>
+</div>
+
+<div class="w-11/12 md:w-7/10 mx-auto mt-8">
+    <div class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-4 gap-4">
+        <button
+            *ngFor="let project of projectList"
+            (click)="goRouteProjectTask(project.id)"
+            class="w-full h-24 bg-blue-500 rounded-lg hover:bg-blue-700 focus:outline-none flex items-center justify-center text-white text-lg font-semibold">
+            {{ project.name }}
+        </button>
+    </div>
+</div>
