feat: Criação de status de tarefas

--- a/src/app/features/project/project-tasks/project-tasks.component.html
+++ b/src/app/features/project/project-tasks/project-tasks.component.html
@@ -1,2 +1,138 @@
 <app-header></app-header>
-<p>project-tasks works!</p>
+
+<div class="sm:px-6 w-full">
+    <div class="px-4 md:px-10 py-4 md:py-7">
+        <div class="flex items-center justify-between">
+            <p tabindex="0" class="focus:outline-none text-base sm:text-lg md:text-xl lg:text-2xl font-bold leading-normal text-gray-800 ">Backlog do Projeto</p>
+            <div class="py-3 px-4 flex items-center text-sm font-medium leading-none text-gray-600  bg-gray-200   hover:bg-gray-300  cursor-pointer rounded">
+                <p>Ordenação:</p>
+                <select aria-label="select" class="focus:text-indigo-600 focus:outline-none bg-transparent ml-1">
+                    <option class="text-sm text-indigo-800">Titulo</option>
+                    <option class="text-sm text-indigo-800">Prioridade</option>
+                    <option class="text-sm text-indigo-800">Id</option>
+                </select>
+            </div>
+        </div>
+    </div>
+    <div class="bg-white  py-4 md:py-7 px-4 md:px-8 xl:px-10">
+        <div class="sm:flex items-center justify-between">
+            <div class="flex items-center">
+                <button (click)="openModalStatus()" class="focus:ring-2 focus:ring-offset-2 focus:ring-indigo-600 mt-4 sm:mt-0 inline-flex items-start justify-start px-6 py-3 bg-indigo-700 hover:bg-indigo-600 focus:outline-none rounded mr-4">
+                    <p class="text-sm font-medium leading-none text-white">Criar Status</p>
+                </button>
+                <a class="rounded-full focus:outline-none focus:ring-2  focus:bg-indigo-50 focus:ring-indigo-800" href=" javascript:void(0)">
+                    
+                    <div class="py-2 px-8 bg-indigo-100 text-indigo-700 rounded-full">
+                        <p>Todos</p>
+                    </div>
+                </a>
+                <a class="rounded-full focus:outline-none focus:ring-2 focus:bg-indigo-50 focus:ring-indigo-800 ml-4 sm:ml-8" href="javascript:void(0)">
+                    <div class="py-2 px-8 text-gray-600  hover:text-indigo-700 hover:bg-indigo-100 rounded-full ">
+                        <p>Done</p>
+                    </div>
+                </a>
+                <a class="rounded-full focus:outline-none focus:ring-2 focus:bg-indigo-50 focus:ring-indigo-800 ml-4 sm:ml-8" href="javascript:void(0)">
+                    <div class="py-2 px-8 text-gray-600  hover:text-indigo-700 hover:bg-indigo-100 rounded-full ">
+                        <p>Pending</p>
+                    </div>
+                </a>
+            </div>
+            <button onclick="popuphandler(true)" class="focus:ring-2 focus:ring-offset-2 focus:ring-indigo-600 mt-4 sm:mt-0 inline-flex items-start justify-start px-6 py-3 bg-indigo-700 hover:bg-indigo-600 focus:outline-none rounded">
+                <p class="text-sm font-medium leading-none text-white">Adicionar Tarefa</p>
+            </button>
+            
+        </div>
+        <div class="mt-7 overflow-x-auto">
+            <table class="w-full whitespace-nowrap">
+                <tbody>
+                    <tr tabindex="0" class="focus:outline-none h-16 border border-gray-100  rounded">
+                        <td>
+                            <div class="ml-5">
+                                <div class="bg-gray-200   rounded-sm w-5 h-5 flex flex-shrink-0 justify-center items-center relative">
+                                    <input placeholder="checkbox" type="checkbox" class="focus:opacity-100 checkbox opacity-0 absolute cursor-pointer w-full h-full" />
+                                    <div class="check-icon hidden bg-indigo-700 text-white rounded-sm">
+                                        <img src="https://tuk-cdn.s3.amazonaws.com/can-uploader/tasks-svg7.svg" alt="check-icon">
+                                    </div>
+                                </div>
+                            </div>
+                        </td>
+                        <td class="">
+                            <div class="flex items-center pl-5">
+                                <p class="text-base font-medium leading-none text-gray-700   mr-2">Marketing Keynote Presentation</p>
+                                <img src="https://tuk-cdn.s3.amazonaws.com/can-uploader/tasks-svg1.svg" alt="clip">
+                            </div>
+                        </td>
+                        <td class="pl-24">
+                            <div class="flex items-center">
+                               <img src="https://tuk-cdn.s3.amazonaws.com/can-uploader/tasks-svg2.svg" alt="tag">
+                                <p class="text-sm leading-none text-gray-600  ml-2">Urgent</p>
+                            </div>
+                        </td>
+                        <td class="pl-5">
+                            <div class="flex items-center">
+                               <img src="https://tuk-cdn.s3.amazonaws.com/can-uploader/tasks-svg3.svg" alt="list">
+                                <p class="text-sm leading-none text-gray-600  ml-2">04/07</p>
+                            </div>
+                        </td>
+                        <td class="pl-5">
+                            <div class="flex items-center">
+                                <img src="https://tuk-cdn.s3.amazonaws.com/can-uploader/tasks-svg4.svg" alt="chat">
+                                <p class="text-sm leading-none text-gray-600  ml-2">23</p>
+                            </div>
+                        </td>
+                        <td class="pl-5">
+                            <div class="flex items-center">
+                               <img src="https://tuk-cdn.s3.amazonaws.com/can-uploader/tasks-svg5.svg" alt="paper clip">
+                                <p class="text-sm leading-none text-gray-600  ml-2">04/07</p>
+                            </div>
+                        </td>
+                        <td class="pl-5">
+                            <button class="py-3 px-3 text-sm focus:outline-none leading-none text-red-700 bg-red-100 rounded">Due today at 18:00</button>
+                        </td>
+                        <td class="pl-4">
+                            <button class="focus:ring-2 focus:ring-offset-2 focus:ring-red-300 text-sm leading-none text-gray-600  py-3 px-5 bg-gray-100 rounded hover:bg-gray-200     focus:outline-none">Visualizar</button>
+                        </td>
+                        
+                    </tr>
+                    <tr class="h-3"></tr>
+
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
+<style>
+    .checkbox:checked + .check-icon {
+        display: flex;
+    }
+</style>
+
+
+<div *ngIf="isModalOpenStatus" class="fixed inset-0 flex items-center justify-center bg-gray-800 bg-opacity-50">
+    <div class="bg-white rounded-lg p-8 w-96">
+        <h2 class="text-2xl mb-4">Cadastro de Status</h2>
+        <form (ngSubmit)="submitFormStatus()">
+            <div class="mb-4">
+                <label for="statusName" class="block text-sm font-semibold">Nome do novo status</label>
+                <input [(ngModel)]="statusName" name="statusName" type="text" id="statusName"
+                    class="w-full mt-2 p-2 border border-gray-300 rounded-md" placeholder="Digite o nome do status"
+                    required />
+            </div>
+            <div class="mb-4">
+                <label for="statusOrder" class="block text-sm font-semibold">Ordem novo status</label>
+                <input [(ngModel)]="statusOrder" name="statusOrder" type="text" id="statusOrder"
+                    class="w-full mt-2 p-2 border border-gray-300 rounded-md" placeholder="Digite a ordem do fluxo"
+                    required />
+            </div>
+            <div class="flex justify-between">
+                <button type="button" class="px-4 py-2 bg-gray-500 text-white rounded-lg" (click)="closeModalStatus()">
+                    Cancelar
+                </button>
+                <button type="submit" class="px-4 py-2 bg-blue-500 text-white rounded-lg">
+                    Salvar
+                </button>
+            </div>
+        </form>
+    </div>
+</div>
+
