--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,15 +1,15 @@
 <header>
-    <nav class="bg-white border-gray-200 px-4 lg:px-6 py-2.5 dark:bg-gray-800">
+    <nav class="bg-white border-gray-200 px-4 lg:px-6 py-2.5">
         <div class="flex flex-wrap justify-between items-center mx-auto max-w-screen-xl">
-            <a routerLink="/project" class="flex items-center">
-                <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">GERENCIAMENTO</span>
+            <a routerLink="/project" href="/project" class="flex items-center">
+                <span class="self-center text-xl font-semibold whitespace-nowrap ">GERENCIAMENTO</span>
             </a>
             <div class="flex items-center lg:order-2">
                 <!-- Nome do usuário e botão de sair para desktop -->
-                <span class="text-gray-800 dark:text-white font-medium text-sm px-4 lg:px-5 py-2 lg:py-2.5 mr-2 hidden lg:block">
+                <span class="text-gray-800 font-medium text-sm px-4 lg:px-5 py-2 lg:py-2.5 mr-2 hidden lg:block">
                     Usuário: {{ name }}
                 </span>
-                <button (click)="logout()" class="hidden lg:block text-white bg-red-600 hover:bg-red-700 focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5 dark:bg-red-500 dark:hover:bg-red-600 focus:outline-none">
+                <button (click)="logout()" class="hidden lg:block text-white bg-red-600 hover:bg-red-700 focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5 focus:outline-none">
                     Sair
                 </button>
 
@@ -24,12 +24,12 @@
 
             <!-- Menu hambúrguer para mobile -->
             <div id="mobile-menu-2" class="hidden w-full lg:hidden">
-                <ul class="flex flex-col items-center bg-gray-100 dark:bg-gray-900 py-4">
-                    <li class="text-gray-800 dark:text-white font-medium text-sm px-4 py-2">
+                <ul class="flex flex-col items-center bg-gray-100 py-4">
+                    <li class="text-gray-800 font-medium text-sm px-4 py-2">
                         Usuário: {{ name }}
                     </li>
                     <li>
-                        <button (click)="logout()" class="text-white bg-red-600 hover:bg-red-700 focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm px-4 py-2 dark:bg-red-500 dark:hover:bg-red-600 focus:outline-none">
+                        <button (click)="logout()" class="text-white bg-red-600 hover:bg-red-700 focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm px-4 py-2 focus:outline-none">
                             Sair
                         </button>
                     </li>
