--- a/src/app/features/project/project-tasks/project-tasks.component.html
+++ b/src/app/features/project/project-tasks/project-tasks.component.html
@@ -26,18 +26,16 @@
                         <p>Todos</p>
                     </div>
                 </a>
-                <a class="rounded-full focus:outline-none focus:ring-2 focus:bg-indigo-50 focus:ring-indigo-800 ml-4 sm:ml-8" href="javascript:void(0)">
+
+                <a 
+                    *ngFor="let statusName of status"
+                    class="rounded-full focus:outline-none focus:ring-2 focus:bg-indigo-50 focus:ring-indigo-800 ml-4 sm:ml-8" href="javascript:void(0)">
                     <div class="py-2 px-8 text-gray-600  hover:text-indigo-700 hover:bg-indigo-100 rounded-full ">
-                        <p>Done</p>
-                    </div>
-                </a>
-                <a class="rounded-full focus:outline-none focus:ring-2 focus:bg-indigo-50 focus:ring-indigo-800 ml-4 sm:ml-8" href="javascript:void(0)">
-                    <div class="py-2 px-8 text-gray-600  hover:text-indigo-700 hover:bg-indigo-100 rounded-full ">
-                        <p>Pending</p>
+                        <p> {{ statusName.name }}</p>
                     </div>
                 </a>
             </div>
-            <button onclick="popuphandler(true)" class="focus:ring-2 focus:ring-offset-2 focus:ring-indigo-600 mt-4 sm:mt-0 inline-flex items-start justify-start px-6 py-3 bg-indigo-700 hover:bg-indigo-600 focus:outline-none rounded">
+            <button (click)="openModalTask()" class="focus:ring-2 focus:ring-offset-2 focus:ring-indigo-600 mt-4 sm:mt-0 inline-flex items-start justify-start px-6 py-3 bg-indigo-700 hover:bg-indigo-600 focus:outline-none rounded">
                 <p class="text-sm font-medium leading-none text-white">Adicionar Tarefa</p>
             </button>
             
@@ -46,16 +44,6 @@
             <table class="w-full whitespace-nowrap">
                 <tbody>
                     <tr tabindex="0" class="focus:outline-none h-16 border border-gray-100  rounded">
-                        <td>
-                            <div class="ml-5">
-                                <div class="bg-gray-200   rounded-sm w-5 h-5 flex flex-shrink-0 justify-center items-center relative">
-                                    <input placeholder="checkbox" type="checkbox" class="focus:opacity-100 checkbox opacity-0 absolute cursor-pointer w-full h-full" />
-                                    <div class="check-icon hidden bg-indigo-700 text-white rounded-sm">
-                                        <img src="https://tuk-cdn.s3.amazonaws.com/can-uploader/tasks-svg7.svg" alt="check-icon">
-                                    </div>
-                                </div>
-                            </div>
-                        </td>
                         <td class="">
                             <div class="flex items-center pl-5">
                                 <p class="text-base font-medium leading-none text-gray-700   mr-2">Marketing Keynote Presentation</p>
@@ -68,27 +56,12 @@
                                 <p class="text-sm leading-none text-gray-600  ml-2">Urgent</p>
                             </div>
                         </td>
-                        <td class="pl-5">
-                            <div class="flex items-center">
-                               <img src="https://tuk-cdn.s3.amazonaws.com/can-uploader/tasks-svg3.svg" alt="list">
-                                <p class="text-sm leading-none text-gray-600  ml-2">04/07</p>
-                            </div>
-                        </td>
-                        <td class="pl-5">
-                            <div class="flex items-center">
-                                <img src="https://tuk-cdn.s3.amazonaws.com/can-uploader/tasks-svg4.svg" alt="chat">
-                                <p class="text-sm leading-none text-gray-600  ml-2">23</p>
-                            </div>
-                        </td>
-                        <td class="pl-5">
-                            <div class="flex items-center">
-                               <img src="https://tuk-cdn.s3.amazonaws.com/can-uploader/tasks-svg5.svg" alt="paper clip">
-                                <p class="text-sm leading-none text-gray-600  ml-2">04/07</p>
-                            </div>
-                        </td>
-                        <td class="pl-5">
+                        
+                       
+                        
+                        <!-- <td class="pl-5">
                             <button class="py-3 px-3 text-sm focus:outline-none leading-none text-red-700 bg-red-100 rounded">Due today at 18:00</button>
-                        </td>
+                        </td> -->
                         <td class="pl-4">
                             <button class="focus:ring-2 focus:ring-offset-2 focus:ring-red-300 text-sm leading-none text-gray-600  py-3 px-5 bg-gray-100 rounded hover:bg-gray-200     focus:outline-none">Visualizar</button>
                         </td>
@@ -136,3 +109,67 @@
     </div>
 </div>
 
+<div *ngIf="isModalOpenTask" class="fixed inset-0 flex items-center justify-center bg-gray-800 bg-opacity-50">
+    <div class="bg-white rounded-lg p-8 w-96">
+        <h2 class="text-2xl mb-4">Cadastro de Tarefa</h2>
+        <form (ngSubmit)="submitFormTask()">
+            <!-- <div class="mb-4">
+                <label for="name" class="block text-sm font-semibold">Nome</label>
+                <input [(ngModel)]="task.name" name="name" type="text" id="name"
+                    class="w-full mt-2 p-2 border border-gray-300 rounded-md" placeholder="Digite o nome da tarefa"
+                    required />
+            </div> -->
+            <div class="mb-4">
+                <label for="title" class="block text-sm font-semibold">Título</label>
+                <input [(ngModel)]="task.title" name="title" type="text" id="title"
+                    class="w-full mt-2 p-2 border border-gray-300 rounded-md" placeholder="Digite o título da tarefa"
+                    required />
+            </div>
+            <div class="mb-4">
+                <label for="description" class="block text-sm font-semibold">Descrição</label>
+                <textarea [(ngModel)]="task.description" name="description" id="description"
+                    class="w-full mt-2 p-2 border border-gray-300 rounded-md" placeholder="Digite a descrição da tarefa"
+                    required></textarea>
+            </div>
+            <div class="grid grid-cols-2 gap-4">
+                <div class="mb-4">
+                    <label for="storyPoints" class="block text-sm font-semibold">Story Points</label>
+                    <input [(ngModel)]="task.storyPoints" name="storyPoints" type="number" id="storyPoints"
+                        class="w-full mt-2 p-2 border border-gray-300 rounded-md" required />
+                </div>
+                <div class="mb-4">
+                    <label for="userResponsible" class="block text-sm font-semibold">Responsável</label>
+                    <select [(ngModel)]="task.userResponsible" name="userResponsible" id="userResponsible"
+                        class="w-full mt-2 p-2 border border-gray-300 rounded-md" required>
+                        <option *ngFor="let user of users" [value]="user.user.id">{{ user.user.name }}</option>
+                    </select>
+                </div>
+            </div>
+            <div class="grid grid-cols-2 gap-4">
+                <div class="mb-4">
+                    <div class="mb-4">
+                        <label for="statusTask" class="block text-sm font-semibold">Status</label>
+                        <select [(ngModel)]="task.statusTask" name="statusTask" id="statusTask"
+                            class="w-full mt-2 p-2 border border-gray-300 rounded-md" required>
+                            <option *ngFor="let statusN of status" [value]="statusN.id">{{ statusN.name }}</option>
+                        </select>
+                    </div>
+
+                </div>
+                <div class="mb-4">
+                    <label for="priorityTask" class="block text-sm font-semibold">Prioridade</label>
+                    <input [(ngModel)]="task.priorityTask" name="priorityTask" type="number" id="priorityTask"
+                        class="w-full mt-2 p-2 border border-gray-300 rounded-md" required />
+                </div>
+            </div>
+            <div class="flex justify-between">
+                <button type="button" class="px-4 py-2 bg-gray-500 text-white rounded-lg" (click)="closeModalTask()">
+                    Cancelar
+                </button>
+                <button type="submit" class="px-4 py-2 bg-blue-500 text-white rounded-lg">
+                    Salvar
+                </button>
+            </div>
+        </form>
+    </div>
+</div>
