--- a/src/app/features/project/project-tasks/project-tasks.component.html
+++ b/src/app/features/project/project-tasks/project-tasks.component.html
@@ -43,27 +43,32 @@
         <div class="mt-7 overflow-x-auto">
             <table class="w-full whitespace-nowrap">
                 <tbody>
-                    <tr tabindex="0" class="focus:outline-none h-16 border border-gray-100  rounded">
+                    <tr 
+                    *ngFor="let tasksItem of tasks"
+                    tabindex="0" class="focus:outline-none h-16 border border-gray-100  rounded">
                         <td class="">
                             <div class="flex items-center pl-5">
-                                <p class="text-base font-medium leading-none text-gray-700   mr-2">Marketing Keynote Presentation</p>
+                                <p class="text-base font-medium leading-none text-gray-700   mr-2">{{ tasksItem.title }}</p>
                                 <img src="https://tuk-cdn.s3.amazonaws.com/can-uploader/tasks-svg1.svg" alt="clip">
                             </div>
                         </td>
                         <td class="pl-24">
                             <div class="flex items-center">
                                <img src="https://tuk-cdn.s3.amazonaws.com/can-uploader/tasks-svg2.svg" alt="tag">
-                                <p class="text-sm leading-none text-gray-600  ml-2">Urgent</p>
+                                <p class="text-sm leading-none text-gray-600  ml-2">{{ tasksItem.priorityTask == 1 ? "Alta" : (tasksItem.priorityTask == 2 ? "Media" : "Baixa") }}</p>
                             </div>
                         </td>
                         
-                       
-                        
-                        <!-- <td class="pl-5">
-                            <button class="py-3 px-3 text-sm focus:outline-none leading-none text-red-700 bg-red-100 rounded">Due today at 18:00</button>
-                        </td> -->
+                        <td class="pl-5">
+                            <button class="py-3 px-3 text-sm focus:outline-none leading-none text-red-700 bg-red-100 rounded">{{tasksItem.statusTask.name}}</button>
+                        </td>
                         <td class="pl-4">
                             <button class="focus:ring-2 focus:ring-offset-2 focus:ring-red-300 text-sm leading-none text-gray-600  py-3 px-5 bg-gray-100 rounded hover:bg-gray-200     focus:outline-none">Visualizar</button>
+                        </td>
+                        <td class="pl-4">
+                            <button (click)="deleteTask(tasksItem.id)" class="focus:ring-2 focus:ring-offset-2 focus:ring-red-500 text-sm leading-none text-white py-3 px-5 bg-red-500 rounded hover:bg-red-600 focus:outline-none">
+                                Deletar
+                            </button>
                         </td>
                         
                     </tr>
